# cheri-dwarf-scanner

./: .gitignore  CMakeLists.txt  bit_flag_enum.hh  dwarf_scraper.cc  flat_layout_scraper.cc  flat_layout_scraper.hh  log.cc  log.hh  pool.hh  scraper-old.hh  scraper.cc  scraper.hh  storage-old.cc  storage-old.hh  storage.cc  storage.hh  struct_layout_scraper.cc  struct_layout_scraper.hh  test_subobject.cc  utils.hh
src/: CMakeLists.txt  bit_flag_enum.hh  dwarf_scraper.cc  flat_layout_scraper.cc  flat_layout_scraper.hh  global_sym_scraper.cc  global_sym_scraper.hh  log.hh  scraper-old.cc  scraper.cc  scraper.hh  storage.cc  storage.hh  struct_layout_scraper.cc  struct_layout_scraper.hh
tests/: fixture.hh  test_subobject.cc  test_vla.cc
tests/assets/: sample_nested_struct_vla  sample_struct_vla  sample_struct_vla.c  sample_union_vla
